Attempt to fix the overlapping links via CSS

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,6 @@ color:#fff;
 font-size: 0.8em;
 }
 
+.navcontent a {
+    position: static;
+}
